--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <title>Фильтры в Алма-Ате</title>
   <link rel="shortcut icon" href="img/favicon.png">
-  <meta description="Воздушные, топливные и маслянные фильтры в Алма-Ате">
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -43,7 +41,7 @@
       <div class="index-intro__pic"></div>
       <div class="index-intro__actions">
         <a href="#" class="index-intro__actions-btn btn">Подобрать</a>
-        <form action="">
+        <form action="#">
           <input type="text" class="index-intro__actions input-field" id="search-article">
         </form>
       </div>
@@ -167,9 +165,21 @@
         </div>
       </div>
       <div class="index-contacts__map">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="560" height="400" frameborder="0"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="560" height="400"></iframe>
       </div>
     </section>
+    <footer class="page-footer">
+      <span class="page-footer__dev-info">Дизайн и реализация — <a href="http://dimavolkov.ru" class="link">Дима Волков</a>
+    </span>
+      <div class="page-footer__docs">
+        <a href="" class="page-footer__docs-link link">Условия доставки</a>
+        <a href="" class="page-footer__docs-link link">Соглашение о конфиденциальности</a>
+      </div>
+      <div class="page-footer__copyright">
+        <span class="page-footer__copyright-info">ООО «Фильтруй» © 2017</br>Алматы, ул.Гагарина, 6А</span>
+        <a href="tel:+7 700 128 64 32" class="link">+7 700 128 64 32</a>
+      </div>
+    </footer>
   </div>
 </body>
 
