--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <title>Фильтры в Алма-Ате</title>
   <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
+      <div class="page-header__logo">
         <img src="img/logo.png" alt="Фильтрол">
         <div class="page-header__logo-text">
-          <span class="page-header__logo-text-main">Фильтрол</span>
-          <span class="page-header__logo-text-slogan">Фильтры на все</span>
+          <a class="page-header__logo-text-main">Фильтрол</a>
+          <a class="page-header__logo-text-slogan">Фильтры на все</a>
         </div>
-      </a>
+      </div>
       <nav class="page-header__menu">
         <ul class="page-header__menu-list">
           <li class="page-header__menu-list-item page-header__menu-list-item--close"><a href="#">Закрыть меню</a></li>
@@ -35,14 +36,15 @@
     </header>
     <section class="index-intro">
       <div class="index-intro__text">
-        <h1 class="index-intro__text-title title title--h1">Фильтры <a href="#" class="link">AG</a>, <a href="#" class="link">Briggs</a>, <a href="#" class="link">Racor Parker</a> по выгодным ценам</h1>
+        <h1 class="index-intro__text-title title title--h1">Фильтры</h1><a href="" class="index-intro__text-link link">AG</a>, <a href="#" class="index-intro__text-link link">Briggs</a>, <a href="#" class="index-intro__text-link link">Racor Parker</a>
+        <h1 class="index-intro__text-title title title--h1">по выгодным ценам</h1>
         <p class="index-intro__text-desc">860 моделей с доставкой по Казахстану</p>
       </div>
       <div class="index-intro__pic"></div>
       <div class="index-intro__actions">
         <a href="#" class="index-intro__actions-btn btn">Подобрать</a>
         <form action="#">
-          <input type="text" class="index-intro__actions input-field" id="search-article">
+          <input type="text" class="index-intro__actions-input input-field" id="search-article" placeholder="Найти по артиклу">
         </form>
       </div>
     </section>
@@ -66,51 +68,59 @@
     </section>
     <section class="items items--sale">
       <h2 class="items__title title title--h2">Фильтры со скидкой<sup><a href="#" class="link">посмотреть все</a></sup></h2>
-      <div class="items__list">
+      <div class="items__list items__list--sale">
         <div class="items__list-column-wrap">
           <div class="items__list-item">
-            <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
+            <a href="#">
+              <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
+            </a>
             <div class="items__list-item-text">
-              <h3 class="items__list-item-text-title"><a href="#" class="link">Briggs SE-1215-90</a></h3>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs SE-1215-90</a>
               <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">999 ₸</span>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">999 ₸</span>
               <p class="items__list-item-price-old-value">1 250 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
-            <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
+            <a href="#">
+              <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
+            </a>
             <div class="items__list-item-text">
-              <h3 class="items__list-item-text-title"><a href="#" class="link">AG 1903-16</a></h3>
+              <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
               <p class="items__list-item-text-desc">Фильтр маслянный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">1 099 ₸</span>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">1 099 ₸</span>
               <p class="items__list-item-price-old-value">1 580 ₸</p>
             </div>
           </div>
         </div>
         <div class="items__list-column-wrap">
           <div class="items__list-item">
-            <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
+            <a href="#">
+              <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
+            </a>
             <div class="items__list-item-text">
-              <h3 class="items__list-item-text-title"><a href="#" class="link">Parker Racor R24S</a></h3>
+              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
               <p class="items__list-item-text-desc">Фильтр топливный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">1 399 ₸</span>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">1 399 ₸</span>
               <p class="items__list-item-price-old-value">1 950 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
-            <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs AE-1218-90" class="items__list-item-img">
+            <a href="#">
+              <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs AE-1218-90" class="items__list-item-img">
+            </a>
             <div class="items__list-item-text">
-              <h3 class="items__list-item-text-title"><a href="#" class="link">Briggs AE-1218-90</a></h3>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs AE-1218-90</a>
               <p class="items__list-item-text-desc">Фильтр маслянный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">1 199 ₸</span>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">1 199 ₸</span>
               <p class="items__list-item-price-old-value">1 550 ₸</p>
             </div>
           </div>
@@ -119,7 +129,7 @@
       <a href="#" class="items__btn btn">Посмотреть всё</a>
     </section>
     <section class="index-shipping">
-      <h2 class="index-shipping__title title title--h2"></h2>
+      <h2 class="index-shipping__title title title--h2">Доставка и оплата</h2>
       <div class="index-shipping__list">
         <div class="index-shipping__list-item index-shipping__list-item--1">
           <h3 class="index-shipping__list-item-title title title--h3">Выбираете товар</h3>
@@ -156,24 +166,24 @@
           <p class="index-contacts__list-item-desc">Алматы, ул. Гагарина, 6А</p>
         </div>
         <div class="index-contacts__list-item">
-          <span class="index-contacts__list-item-title">Адрес офиса</span>
-          <p class="index-contacts__list-item-desc">Алматы, ул. Гагарина, 6А</p>
+          <span class="index-contacts__list-item-title">По вопросам покупок</span>
+          <a class="index-contacts__list-item-desc" href="tel:+7 700 128 64 32">+7 700 128 64 32</a>
         </div>
         <div class="index-contacts__list-item">
           <span class="index-contacts__list-item-title">Адрес офиса</span>
-          <p class="index-contacts__list-item-desc">Алматы, ул. Гагарина, 6А</p>
+          <a class="index-contacts__list-item-desc href="tel:+7 700 128 64 32">+7 700 643 21 68</a>
         </div>
       </div>
       <div class="index-contacts__map">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="560" height="400"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="320" height="400"></iframe>
       </div>
     </section>
     <footer class="page-footer">
-      <span class="page-footer__dev-info">Дизайн и реализация — <a href="http://dimavolkov.ru" class="link">Дима Волков</a>
+      <span class="page-footer__dev-info">Дизайн и реализация — <a href="http://dimavolkov.ru" class="link--black">Дима Волков</a>
     </span>
       <div class="page-footer__docs">
-        <a href="" class="page-footer__docs-link link">Условия доставки</a>
-        <a href="" class="page-footer__docs-link link">Соглашение о конфиденциальности</a>
+        <a href="" class="page-footer__docs-link link--black">Условия доставки</a>
+        <a href="" class="page-footer__docs-link link--black">Соглашение о конфиденциальности</a>
       </div>
       <div class="page-footer__copyright">
         <span class="page-footer__copyright-info">ООО «Фильтруй» © 2017</br>Алматы, ул.Гагарина, 6А</span>
