Add tablet version for index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <section class="index-intro">
       <div class="index-intro__text">
-        <h1 class="index-intro__text-title title title--h1">Фильтры</h1><a href="" class="index-intro__text-link link">AG</a>, <a href="#" class="index-intro__text-link link">Briggs</a>, <a href="#" class="index-intro__text-link link">Racor Parker</a>
+        <h1 class="index-intro__text-title title title--h1">Фильтры </h1><a href="" class="index-intro__text-link link link--black">AG</a>, <a href="#" class="index-intro__text-link link link--black">Briggs</a>, <a href="#" class="index-intro__text-link link link--black">Racor Parker</a>
         <h1 class="index-intro__text-title title title--h1">по выгодным ценам</h1>
         <p class="index-intro__text-desc">860 моделей с доставкой по Казахстану</p>
       </div>
@@ -63,7 +63,8 @@
       </div>
       <div class="index-advantages__factoid">
         <span class="index-advantages__factoid-title">30 213</span>
-        <p class="index-advantages__factoid-desc">Заказов было доставлено в 2016 году</p>
+        <p class="index-advantages__factoid-desc">Заказов было доставлено
+          <br> в 2016 году</p>
       </div>
     </section>
     <section class="items items--sale">
@@ -126,7 +127,9 @@
           </div>
         </div>
       </div>
-      <a href="#" class="items__btn btn">Посмотреть всё</a>
+      <div class="container container--ib">
+        <a href="#" class="items__btn items__btn--sale btn">Посмотреть всё</a>
+      </div>
     </section>
     <section class="index-shipping">
       <h2 class="index-shipping__title title title--h2">Доставка и оплата</h2>
@@ -171,26 +174,31 @@
         </div>
         <div class="index-contacts__list-item">
           <span class="index-contacts__list-item-title">Адрес офиса</span>
-          <a class="index-contacts__list-item-desc href="tel:+7 700 128 64 32">+7 700 643 21 68</a>
+          <a class="index-contacts__list-item-desc href=" tel:+7 700 128 64 32 ">+7 700 643 21 68</a>
         </div>
       </div>
-      <div class="index-contacts__map">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="320" height="400"></iframe>
+      <div class="index-contacts__map ">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC " width="320 " height="400 "></iframe>
       </div>
     </section>
-    <footer class="page-footer">
-      <span class="page-footer__dev-info">Дизайн и реализация — <a href="http://dimavolkov.ru" class="link--black">Дима Волков</a>
-    </span>
-      <div class="page-footer__docs">
-        <a href="" class="page-footer__docs-link link--black">Условия доставки</a>
-        <a href="" class="page-footer__docs-link link--black">Соглашение о конфиденциальности</a>
+    <footer class="page-footer ">
+      <span class="page-footer__dev-info ">Дизайн и реализация — <a href="http://dimavolkov.ru " class="link--black ">Дима Волков</a>
+      </span>
+      <div class="page-footer__docs ">
+        <div class="page-footer__docs-link ">
+          <a href="# " class="link link--black ">Условия доставки</a>
+        </div>
+        <div class="page-footer__docs-link ">
+          <a href="# " class="link link--black ">Соглашение о конфиденциальности</a>
+        </div>
       </div>
-      <div class="page-footer__copyright">
-        <span class="page-footer__copyright-info">ООО «Фильтруй» © 2017</br>Алматы, ул.Гагарина, 6А</span>
-        <a href="tel:+7 700 128 64 32" class="link">+7 700 128 64 32</a>
+      <div class="page-footer__copyright ">
+        <span class="page-footer__copyright-info ">ООО «Фильтруй» © 2017</br>Алматы, ул.Гагарина, 6А</span>
+        <a href="tel:+7 700 128 64 32 " class="link ">+7 700 128 64 32</a>
       </div>
     </footer>
   </div>
+  <script src="js/main.js "></script>
 </body>
 
 </html>
