--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <nav class="page-header__menu">
         <ul class="page-header__menu-list">
           <li class="page-header__menu-list-item page-header__menu-list-item--close"><a href="#">Закрыть меню</a></li>
-          <li class="page-header__menu-list-item"><a href="#">Маслянные</a></li>
-          <li class="page-header__menu-list-item"><a href="#">Топливные</a></li>
-          <li class="page-header__menu-list-item"><a href="#">Воздушные</a></li>
-          <li class="page-header__menu-list-item"><a href="#">Доставка и оплата</a></li>
-          <li class="page-header__menu-list-item"><a href="#">Контакты</a></li>
-          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a href="#">Корзина пуста</a></li>
+          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Маслянные</a></li>
+          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Топливные</a></li>
+          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Воздушные</a></li>
+          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Доставка и оплата</a></li>
+          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Контакты</a></li>
+          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a>Корзина пуста</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--contacts"><a href="tel:+77001286432">+7 700 128 64 32</a>
             <br>Работаем с 8:00 до 20:00</li>
         </ul>
@@ -51,15 +51,15 @@
     <section class="index-advantages">
       <div class="index-advantages__item">
         <h3 class="index-advantages__item-title title title--h3">Даём выбор</h3>
-        <p class="index-advantages__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <p class="index-advantages__item-text">Почти тысяча моделей фильтров для вашей техники. Только от проверенных производителей, только с хорошим качеством. Загляните в каталог, подберите по артикулу или марке техники, сделайте лучший выбор</p>
       </div>
       <div class="index-advantages__item">
         <h3 class="index-advantages__item-title title title--h3">Фиксируем цену</h3>
-        <p class="index-advantages__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <p class="index-advantages__item-text">Наши цены не растут! Вы заплатите ровно столько, сколько планировали, оформляя заказ. Мы зафиксируем стоимость на той сумме, которая вас привлекла. Пользуйтесь скидками, заказывайте сегодня — вы сэкономите!</p>
       </div>
       <div class="index-advantages__item">
         <h3 class="index-advantages__item-title title title--h3">Доставляем быстро</h3>
-        <p class="index-advantages__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <p class="index-advantages__item-text">Работаем по всему Казахстану и отправляем грузы на автомобилях. Ваш заказ будет собран в день подтверждения и отправлен по вашему адресу в ближайшее время. Мы не задержимся!</p>
       </div>
       <div class="index-advantages__factoid">
         <span class="index-advantages__factoid-title">30 213</span>
@@ -68,7 +68,7 @@
       </div>
     </section>
     <section class="items items--sale">
-      <h2 class="items__title title title--h2">Фильтры со скидкой<sup><a href="#" class="link">посмотреть все</a></sup></h2>
+      <h2 class="items__title title title--h2">Фильтры со скидкой<sup><a href="#" class="link link--orange">посмотреть все</a></sup></h2>
       <div class="items__list items__list--sale">
         <div class="items__list-column-wrap">
           <div class="items__list-item">
@@ -136,19 +136,19 @@
       <div class="index-shipping__list">
         <div class="index-shipping__list-item index-shipping__list-item--1">
           <h3 class="index-shipping__list-item-title title title--h3">Выбираете товар</h3>
-          <p class="index-shipping__list-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+          <p class="index-shipping__list-item-desc">Зайдите в каталог и подберите фильтр по типу и марке, наберите артикул, воспользуйтесь подсказками для быстрого подбора. Даже если вы никогда раньше не покупали расходные материалы, подбор не займет много времени.</p>
         </div>
         <div class="index-shipping__list-item index-shipping__list-item--2">
           <h3 class="index-shipping__list-item-title title title--h3">Оплачивайте заказ</h3>
-          <p class="index-shipping__list-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+          <p class="index-shipping__list-item-desc">Мы используем все возможные в Казахстане способы оплаты. Перечислите нужную сумму за товар, воспользовавшись картой, электронными деньгами, банковским переводом.</p>
         </div>
         <div class="index-shipping__list-item index-shipping__list-item--3">
           <h3 class="index-shipping__list-item-title title title--h3">Выбираете способ доставки</h3>
-          <p class="index-shipping__list-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="index-shipping__list-item-desc">Вам доступны все варианты доставки: почта, курьерская служба, транспортные компании. От вашего выбора зависит срок и стоимость транспортировки. Выберите оптимальный вариант и согласуйте его с менеджером.</p>
         </div>
         <div class="index-shipping__list-item index-shipping__list-item--4">
           <h3 class="index-shipping__list-item-title title title--h3">Получаете свой товар</h3>
-          <p class="index-shipping__list-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+          <p class="index-shipping__list-item-desc">Через несколько дней после оформления заказа вы получите покупку на руки. Порядок выдачи зависит от выбранного способа, но, как правило, товары привозят к порогу офиса, дома или склада заказчика.</p>
         </div>
       </div>
       <div class="index-shipping__factoid">
