--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <nav class="page-header__menu">
         <ul class="page-header__menu-list">
           <li class="page-header__menu-list-item page-header__menu-list-item--close"><a href="#">Закрыть меню</a></li>
-          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Маслянные</a></li>
-          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Топливные</a></li>
-          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Воздушные</a></li>
+          <li class="page-header__menu-list-item"><a href="oil-filters.html" class="link link--black">Маслянные</a></li>
+          <li class="page-header__menu-list-item"><a href="fuel-filters.html" class="link link--black">Топливные</a></li>
+          <li class="page-header__menu-list-item"><a href="air-filters.html" class="link link--black">Воздушные</a></li>
           <li class="page-header__menu-list-item"><a href="#" class="link link--black">Доставка и оплата</a></li>
           <li class="page-header__menu-list-item"><a href="#" class="link link--black">Контакты</a></li>
-          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a>Корзина пуста</a></li>
+          <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a href="cart.html">Корзина пуста</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--contacts"><a href="tel:+77001286432">+7 700 128 64 32</a>
             <br>Работаем с 8:00 до 20:00</li>
         </ul>
@@ -68,9 +68,9 @@
       </div>
     </section>
     <section class="items items--sale">
-      <h2 class="items__title title title--h2">Фильтры со скидкой<sup><a href="#" class="link link--orange">посмотреть все</a></sup></h2>
+      <h2 class="items__title--sale title title--h2">Фильтры со скидкой<sup><a href="#" class="link link--orange">посмотреть все</a></sup></h2>
       <div class="items__list items__list--sale">
-        <div class="items__list-column-wrap">
+        <div class="items__list-column-wrap items__list-column-wrap--sale">
           <div class="items__list-item">
             <a href="#">
               <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
@@ -80,8 +80,8 @@
               <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">999 ₸</span>
-              <p class="items__list-item-price-old-value">1 250 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">3 799 ₸</span>
+              <p class="items__list-item-price-old-value">4 250 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
@@ -90,15 +90,15 @@
             </a>
             <div class="items__list-item-text">
               <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">1 099 ₸</span>
-              <p class="items__list-item-price-old-value">1 580 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
+              <p class="items__list-item-price-old-value">4 580 ₸</p>
             </div>
           </div>
         </div>
-        <div class="items__list-column-wrap">
+        <div class="items__list-column-wrap items__list-column-wrap--sale">
           <div class="items__list-item">
             <a href="#">
               <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
@@ -108,8 +108,8 @@
               <p class="items__list-item-text-desc">Фильтр топливный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">1 399 ₸</span>
-              <p class="items__list-item-price-old-value">1 950 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
+              <p class="items__list-item-price-old-value">5 550 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
@@ -118,11 +118,11 @@
             </a>
             <div class="items__list-item-text">
               <a href="#" class="items__list-item-text-link link link--black">Briggs AE-1218-90</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">1 199 ₸</span>
-              <p class="items__list-item-price-old-value">1 550 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">4 199 ₸</span>
+              <p class="items__list-item-price-old-value">4 550 ₸</p>
             </div>
           </div>
         </div>
@@ -177,28 +177,28 @@
           <a class="index-contacts__list-item-desc href=" tel:+7 700 128 64 32 ">+7 700 643 21 68</a>
         </div>
       </div>
-      <div class="index-contacts__map ">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC " width="320 " height="400 "></iframe>
+      <div class="index-contacts__map">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBQrVRWOsC" width="320" height="400"></iframe>
       </div>
     </section>
-    <footer class="page-footer ">
-      <span class="page-footer__dev-info ">Дизайн и реализация — <a href="http://dimavolkov.ru " class="link--black ">Дима Волков</a>
+    <footer class="page-footer">
+      <span class="page-footer__dev-info">Дизайн и реализация — <a href="http://dimavolkov.ru" class="link--black">Дима Волков</a>
       </span>
-      <div class="page-footer__docs ">
-        <div class="page-footer__docs-link ">
-          <a href="# " class="link link--black ">Условия доставки</a>
+      <div class="page-footer__docs">
+        <div class="page-footer__docs-link">
+          <a href="#" class="link link--black">Условия доставки</a>
         </div>
-        <div class="page-footer__docs-link ">
-          <a href="# " class="link link--black ">Соглашение о конфиденциальности</a>
+        <div class="page-footer__docs-link">
+          <a href="#" class="link link--black">Соглашение о конфиденциальности</a>
         </div>
       </div>
-      <div class="page-footer__copyright ">
-        <span class="page-footer__copyright-info ">ООО «Фильтруй» © 2017</br>Алматы, ул.Гагарина, 6А</span>
-        <a href="tel:+7 700 128 64 32 " class="link ">+7 700 128 64 32</a>
+      <div class="page-footer__copyright">
+        <span class="page-footer__copyright-info">ООО «Фильтрол» © 2017</br>Алматы, ул.Гагарина, 6А</span>
+        <a href="tel:+7 700 128 64 32 " class="link">+7 700 128 64 32</a>
       </div>
     </footer>
   </div>
-  <script src="js/main.js "></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
