New page cart.html + fix validation errors

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
               <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs SE-1215-90</a>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs  Stratton 1590</a>
               <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">3 799 ₸</span>
-              <p class="items__list-item-price-old-value">4 250 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
+              <p class="items__list-item-price-old-value">3 550 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
@@ -117,12 +117,12 @@
               <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs AE-1218-90" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs AE-1218-90</a>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
               <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 199 ₸</span>
-              <p class="items__list-item-price-old-value">4 550 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
+              <p class="items__list-item-price-old-value">3 850 ₸</p>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@
         <a href="#" class="items__btn items__btn--sale btn">Посмотреть всё</a>
       </div>
     </section>
-    <section class="index-shipping">
+    <section class="index-shipping" id="index-shipping">
       <h2 class="index-shipping__title title title--h2">Доставка и оплата</h2>
       <div class="index-shipping__list">
         <div class="index-shipping__list-item index-shipping__list-item--1">
@@ -160,7 +160,7 @@
         <a href="#" class="index-shipping__feedback-btn btn">Задать вопрос</a>
       </div>
     </section>
-    <section class="index-contacts">
+    <section class="index-contacts" id="index-contacts">
       <h2 class="index-contacts__title title title--h2">Контакты</h2>
       <p class="index-contacts__desc">Мы работаем с 8:00 до 20:00 без выходных. Получить товар вы можете нашей службой доставки, либо забрать его в офисе</p>
       <div class="index-contacts__list">
@@ -170,11 +170,11 @@
         </div>
         <div class="index-contacts__list-item">
           <span class="index-contacts__list-item-title">По вопросам покупок</span>
-          <a class="index-contacts__list-item-desc" href="tel:+7 700 128 64 32">+7 700 128 64 32</a>
+          <a class="index-contacts__list-item-desc" href="tel:+77001286432">+7 700 128 64 32</a>
         </div>
         <div class="index-contacts__list-item">
           <span class="index-contacts__list-item-title">Адрес офиса</span>
-          <a class="index-contacts__list-item-desc href=" tel:+7 700 128 64 32 ">+7 700 643 21 68</a>
+          <a class="index-contacts__list-item-desc" href="tel:+77001286432">+7 700 643 21 68</a>
         </div>
       </div>
       <div class="index-contacts__map">
@@ -193,8 +193,8 @@
         </div>
       </div>
       <div class="page-footer__copyright">
-        <span class="page-footer__copyright-info">ООО «Фильтрол» © 2017</br>Алматы, ул.Гагарина, 6А</span>
-        <a href="tel:+7 700 128 64 32 " class="link">+7 700 128 64 32</a>
+        <span class="page-footer__copyright-info">ООО «Фильтрол» © 2017<br>Алматы, ул.Гагарина, 6А</span>
+        <a href="tel:+77001286432" class="link">+7 700 128 64 32</a>
       </div>
     </footer>
   </div>
