--- a/air-filters.html
+++ b/air-filters.html
@@ -25,8 +25,8 @@
         <ul class="page-header__menu-list">
           <li class="page-header__menu-list-item page-header__menu-list-item--close"><a href="#">Закрыть меню</a></li>
           <li class="page-header__menu-list-item"><a href="oil-filters.html" class="link link--black">Маслянные</a></li>
-          <li class="page-header__menu-list-item"><a class="link link--active">Топливные</a></li>
-          <li class="page-header__menu-list-item"><a href="air-filters.html" class="link link--black">Воздушные</a></li>
+          <li class="page-header__menu-list-item"><a href="fuel-filters.html" class="link link--black">Топливные</a></li>
+          <li class="page-header__menu-list-item"><a class="link link--active">Воздушные</a></li>
           <li class="page-header__menu-list-item"><a href="index.html#index-shipping" class="link link--black">Доставка и оплата</a></li>
           <li class="page-header__menu-list-item"><a href="index.html#index-contacts" class="link link--black">Контакты</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a href="cart.html">Корзина пуста</a></li>
@@ -44,11 +44,11 @@
           <span class="modal-filter__close-part-right"></span>
           </span>
           <div class="modal-filter__text">
-            <h3 class="modal-filter__text-title title title--h3">Топливный фильтр Parker Racor 245R</h3>
-            <p class="modal-filter__text-article">Артикул: F245RM</p>
+            <h3 class="modal-filter__text-title title title--h3">Воздушный фильтр AG 10351</h3>
+            <p class="modal-filter__text-article">Артикул: AGFA-10351M</p>
           </div>
           <div class="modal-filter__wrap">
-            <img src="img/items/parker-racor-245r.jpg" alt="Parker Racor 245R" class="modal-filter__pic">
+            <img src="img/items/ag-10351.jpg" alt="AG 10351" class="modal-filter__pic">
             <div class="modal-filter__info">
               <div class="modal-filter__info-item">
                 <h4 class="modal-filter__info-item-title">Гарантия 2 месяца</h4>
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="modal-filter__wrap">
-            <span class="modal-filter__price">Цена — 6 800 ₸</span>
+            <span class="modal-filter__price">Цена — 3 800 ₸</span>
             <div class="modal-filter__btn-wrap">
               <a href="cart.html" class="modal-filter__btn btn">Купить сейчас</a>
               <span class="modal-filter__btn-desc">или <a href="cart.html" class="link link--orange">положить в корзину</a>
@@ -75,33 +75,47 @@
         </div>
       </div>
       <div class="items__title">
-        <h2 class="title title--h2">Топливные фильтры Parker Racor, AG, Briggs & Stratton</h2>
+        <h2 class="title title--h2">Воздушные фильтры AG, Briggs Stratton</h2>
       </div>
       <div class="items__list">
+
         <!-- 1ST COLUMN -->
         <div class="items__list-column-wrap">
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-245r.jpg" alt="Parker Racor 245R" class="items__list-item-img">
+              <img src="img/items/ag-10351.jpg" alt="AG 10351" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor 245R</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 10351</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">6 800 ₸</span>
+              <span class="items__list-item-price-value">3 800 ₸</span>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r90s.jpg" alt="Parker Racor R90S" class="items__list-item-img">
+              <img src="img/items/ag-85939.jpg" alt="AG 85939" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R90S6</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 85939</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">5 900 ₸</span>
+              <span class="items__list-item-price-value">3 900 ₸</span>
+            </div>
+          </div>
+          <div class="items__list-item">
+            <a href="#">
+              <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs & Stratton 1218" class="items__list-item-img">
+            </a>
+            <div class="items__list-item-text">
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
+            </div>
+            <div class="items__list-item-price">
+              <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
+              <p class="items__list-item-price-old-value">3 850 ₸</p>
             </div>
           </div>
         </div>
@@ -110,66 +124,79 @@
         <div class="items__list-column-wrap">
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
+              <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
-              <p class="items__list-item-price-old-value">5 550 ₸</p>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
+              <p class="items__list-item-price-old-value">4 580 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r20p.jpg" alt="Parker Racor R20P" class="items__list-item-img">
+              <img src="img/items/ag-591583.jpg" alt="AG 591583" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R20P</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 591583</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">5 650 ₸</span>
+              <span class="items__list-item-price-value">3 250 ₸</span>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/briggs-69684.jpg" alt="Briggs & Stratton 69684" class="items__list-item-img">
+              <img src="img/items/briggs-491588.jpg" alt="Briggs Stratton 491588" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs & Stratton 69684</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 491588</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">6 850 ₸</span>
+              <span class="items__list-item-price-value">3 850 ₸</span>
             </div>
           </div>
         </div>
+
         <!-- 3RD COLUMN -->
         <div class="items__list-column-wrap">
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r60t.jpg" alt="Parker Racor R60T" class="items__list-item-img">
+              <img src="img/items/ag-900.jpg" alt="AG 900" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R60T</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 900</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 650 ₸</span>
+              <span class="items__list-item-price-value">3 550 ₸</span>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r12s.jpg" alt="Parker Racor R12S" class="items__list-item-img">
+              <img src="img/items/ag-678972.jpg" alt="AG 678972" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R12S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 678972</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 750 ₸</span>
+              <span class="items__list-item-price-value">3 350 ₸</span>
+            </div>
+          </div>
+          <div class="items__list-item">
+            <a href="#">
+              <img src="img/items/briggs-499486S.jpg" alt="Briggs Stratton 4986S" class="items__list-item-img">
+            </a>
+            <div class="items__list-item-text">
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 4986S</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
+            </div>
+            <div class="items__list-item-price">
+              <span class="items__list-item-price-value">3 950 ₸</span>
             </div>
           </div>
         </div>
@@ -178,38 +205,51 @@
         <div class="items__list-column-wrap">
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/parker-racor-r45s.jpg" alt="Parker Racor R45S" class="items__list-item-img">
+              <img src="img/items/ag-03839.jpg" alt="AG 3839" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R45S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">AG 3839</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 850 ₸</span>
+              <span class="items__list-item-price-value">4 000 ₸</span>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/ag-sf8456.jpg" alt="AG SF8456" class="items__list-item-img">
+              <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG SF8456</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1590</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 750 ₸</span>
+              <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
+              <p class="items__list-item-price-old-value">3 550 ₸</p>
             </div>
           </div>
           <div class="items__list-item">
             <a href="#">
-              <img src="img/items/briggs-lr10.jpg" alt="Briggs & Stratton LR10" class="items__list-item-img">
+              <img src="img/items/briggs-593260.jpg" alt="Briggs Stratton 5932" class="items__list-item-img">
             </a>
             <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton LR10</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
             </div>
             <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 750 ₸</span>
+              <span class="items__list-item-price-value">3 250 ₸</span>
+            </div>
+          </div>
+          <div class="items__list-item">
+            <a href="#">
+              <img src="img/items/briggs-593260c.jpg" alt="Briggs Stratton 5932C" class="items__list-item-img">
+            </a>
+            <div class="items__list-item-text">
+              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932C</a>
+              <p class="items__list-item-text-desc">Фильтр воздушный</p>
+            </div>
+            <div class="items__list-item-price">
+              <span class="items__list-item-price-value">3 100 ₸</span>
             </div>
           </div>
         </div>
